[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/YHMA/Menus/BaseMenu/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/YHMA/Menus/Settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://addons/YHMA/icons/Folder.svg" type="Texture" id=3]

[node name="Settings" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="SelectExportFolderS" type="FileDialog" parent="." index="0"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -446.0
margin_top = -248.0
margin_right = 446.0
margin_bottom = 248.0
window_title = "Select the Folder for exported mods"
mode_overrides_title = false
mode = 2
access = 2

[node name="General Settings" type="VBoxContainer" parent="VBoxContainer" index="0"]
margin_right = 640.0
margin_bottom = 149.0
size_flags_horizontal = 3

[node name="RTLabel" type="RichTextLabel" parent="VBoxContainer/General Settings" index="0"]
margin_right = 640.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center][b]General Settings"
text = "General Settings"
fit_content_height = true
scroll_active = false

[node name="ReopenLast" type="CheckButton" parent="VBoxContainer/General Settings" index="1" groups=["setting"]]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 640.0
margin_bottom = 59.0
hint_tooltip = "Auto open your previous mod folder after restart"
text = "Re-open last opened mod folder upon launch"
clip_text = true
align = 1

[node name="RememberPreviousModName" type="CheckButton" parent="VBoxContainer/General Settings" index="2" groups=["setting"]]
unique_name_in_owner = true
margin_top = 63.0
margin_right = 640.0
margin_bottom = 103.0
hint_tooltip = "When enabled it will remember the previous mod name that was exported and delete that mod upon pressing (or auto) export"
pressed = true
text = "Remember Previous Mod Name After Restart"
clip_text = true
align = 1

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/General Settings" index="3"]
margin_top = 107.0
margin_right = 640.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RTLabel" type="Label" parent="VBoxContainer/General Settings/HBoxContainer" index="0"]
margin_right = 640.0
margin_bottom = 14.0
size_flags_horizontal = 9
text = "Defualt Export Path"
align = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/General Settings/HBoxContainer" index="1"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 42.0

[node name="defualt_export_path" type="LineEdit" parent="VBoxContainer/General Settings/HBoxContainer/HBoxContainer" index="0" groups=["setting"]]
unique_name_in_owner = true
margin_right = 608.0
margin_bottom = 24.0
hint_tooltip = "Will auto change the defualt export path to this when ever you open a mod. Leave empty for defualt location."
size_flags_horizontal = 3

[node name="SelectExportPath" type="Button" parent="VBoxContainer/General Settings/HBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 612.0
margin_right = 640.0
margin_bottom = 24.0
icon = ExtResource( 3 )
clip_text = true

[node name="CharTemplate Settings" type="VBoxContainer" parent="VBoxContainer" index="1"]
visible = false
margin_top = 153.0
margin_right = 640.0
margin_bottom = 212.0
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="RTLabel" type="RichTextLabel" parent="VBoxContainer/CharTemplate Settings" index="0"]
margin_right = 640.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center][b]Character Template Settings"
text = "Character Template Settings"
fit_content_height = true
scroll_active = false

[node name="char_loader_Support" type="CheckButton" parent="VBoxContainer/CharTemplate Settings" index="1" groups=["setting"]]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 640.0
margin_bottom = 59.0
hint_tooltip = "(Not recomended to turn off) If you use another way than Character Loader for your characters then you can turn this off."
text = "Add char_loader support when creating"
clip_text = true
align = 1

[node name="Overwrites Template Settings" type="VBoxContainer" parent="VBoxContainer" index="2"]
margin_top = 153.0
margin_right = 640.0
margin_bottom = 212.0
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="RTLabel" type="RichTextLabel" parent="VBoxContainer/Overwrites Template Settings" index="0"]
margin_right = 640.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center][b]Overwrites Template Settings"
text = "Overwrites Template Settings"
fit_content_height = true
scroll_active = false

[node name="add_anim_folder_overwrites" type="CheckButton" parent="VBoxContainer/Overwrites Template Settings" index="1" groups=["setting"]]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 640.0
margin_bottom = 59.0
hint_tooltip = "When on will create all folders pertaining to the animations of the character."
pressed = true
text = "Add animation folders for characters when created"
clip_text = true
align = 1

[node name="Misc Settings" type="VBoxContainer" parent="VBoxContainer" index="3"]
visible = false
margin_top = 279.0
margin_right = 640.0
margin_bottom = 294.0
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="RTLabel" type="RichTextLabel" parent="VBoxContainer/Misc Settings" index="0"]
margin_right = 640.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center][b]Misc Settings"
text = "Misc Settings"
fit_content_height = true
scroll_active = false

[node name="Experimental Settings" type="VBoxContainer" parent="VBoxContainer" index="4"]
visible = false
margin_top = 189.0
margin_right = 640.0
margin_bottom = 204.0
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="RTLabel" type="RichTextLabel" parent="VBoxContainer/Experimental Settings" index="0"]
margin_right = 640.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center][b]Experimental Settings"
text = "Experimental Settings"
fit_content_height = true
scroll_active = false

[node name="Padding" parent="VBoxContainer" index="5"]
margin_top = 216.0
margin_bottom = 336.0

[node name="Back" type="Button" parent="VBoxContainer" index="6"]
margin_top = 340.0
margin_right = 640.0
margin_bottom = 360.0
text = "Home"

[connection signal="dir_selected" from="SelectExportFolderS" to="." method="_on_SelectExportFolderS_dir_selected"]
[connection signal="pressed" from="VBoxContainer/General Settings/HBoxContainer/HBoxContainer/SelectExportPath" to="." method="_on_SelectExportPath_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
